--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,12 @@
-﻿# Node modules
-node_modules/
+﻿target/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Environment variables
 .env
 .env.local
-.env.production
 
-# Build outputs
-dist/
-build/
-.next/
-out/
-
-# Logs
-*.log
-npm-debug.log*
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
 .idea/
+*.iml
+.vscode/
+
+HELP.md
+*.log
